# sagittarius-dbd-sqlite3

./: CMakeLists.txt  README.md  cmake_uninstall.cmake.in  sqlite3.scm.in  test-dbi.scm  test.scm
cmake/: FindSqlite3.cmake
dbd/: sqlite3.scm
